layout fixes, mobile spacing fixes

--- a/civictechprojects/static/css/partials/_PartnerWithUsController.scss
+++ b/civictechprojects/static/css/partials/_PartnerWithUsController.scss
@@ -35,19 +35,23 @@
 
 .PartnerWithUsController-sponsor {
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
   margin: 1rem 0;
 }
 
 .PartnerWithUsController-sponsor h6 {
   font-weight: bold;
+  margin-top: 1.25rem;
 }
 
 .PartnerWithUsController-sponsor-logo {
-  min-width: 200px;
+  flex-basis: 300px; /* set "ideal size" of logo width */
+  min-width: 300px; /* now all of these are forced up to 300, lining up content nicely */
   text-align: center;
-  margin: 0 auto; /* centers child image */
+  margin: 0 auto; /* centers sponsor image inside assigned width if required */
 }
+
 
 @include media-breakpoint-up(md) {
   .PartnerWithUsController-sponsor {
@@ -55,5 +59,8 @@
   }
   .PartnerWithUsController-sponsor-text {
     padding-left: 20px;
+  }
+  .PartnerWithUsController-sponsor h6 {
+    margin-top: 0;
   }
 }
